refactor: tipar request/response da Groq API com records em vez de Map